# encode

./: .gitignore  .prettierrc  .tarpaulin.toml  CHANGELOG.md  Cargo.toml  README.md
.github/: README.md  define_matrix.py  note.md
.github/workflows/: build_and_release.yaml  cargo_deny.yaml  ci.yaml  ci.yml  release-plz.yml
examples/: bson.rs  json.rs
src/: lib.rs
src/combinators/: be.rs  cond.rs  flags.rs  from_error.rs  indent.rs  iter.rs  le.rs  length_prefix.rs  mod.rs  separated.rs
src/encodables/: arrayvec.rs  bytes.rs  fmt.rs  mod.rs  option_result.rs  primitives.rs  tuples.rs
src/encoders/: alloc.rs  arrayvec.rs  bytes.rs  errors.rs  fmt.rs  mod.rs  primitives.rs  size.rs  slices.rs  std_alloc.rs  std_io.rs
src/impls/: alloc.rs  fmt.rs  mod.rs  option_result.rs  primitives.rs  slices.rs  std_alloc.rs  tuples.rs
