[package]
name = "encode"
version = "0.1.3"
edition = "2021"
rust-version = "1.84.0"
description = "A simple framework for encoding binary data."
license = "MIT"
homepage = "https://github.com/Altair-Bueno/encode"
repository = "https://github.com/Altair-Bueno/encode"
readme = "README.md"
keywords = ["encoding", "no-std", "no-alloc", "framework"]
categories = ["encoding", "no-std"]
authors = ["Altair Bueno"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []
arrayvec = ["dep:arrayvec"]
bytes = ["dep:bytes"]

[dependencies]
arrayvec = { version = "0.7.6", optional = true, default-features = false }
bytes = { version = "1.10.1", optional = true, default-features = false }
paste = "1"

[[example]]
name = "json"
required-features = ["std"]

[[example]]
name = "bson"
required-features = ["alloc"]
